Fix small post on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -2284,6 +2284,7 @@ img {
 @media (max-width: 480px) {
   .span6.list-post-small {
     width: 100%;
+    margin-left: 0;
   }
 
   .list-post-small .more {
