--- a/sass/_responsive.scss
+++ b/sass/_responsive.scss
@@ -121,6 +121,7 @@ img {
 @media (max-width: 480px) {
 	.span6.list-post-small {
 		width: 100%;
+		margin-left: 0;
 	}
 
 	.list-post-small .more {
